--- a/src/components/Guestbook.scss
+++ b/src/components/Guestbook.scss
@@ -1,9 +1,9 @@
 .guestbook {
-  margin-top: 50px;
   position: relative;
   z-index: 10;
   width: 100%;
   max-width: 600px;
+  margin: 0 auto;
 }
 
 .guestbook-container {
